--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "html-webpack-plugin": "^4.0.2",
+    "webpack-cli": "^3.3.11"
   }
 }
