--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "prepare": "rmdir /s/q dist && npm run build",
+    "publish": "npm publish"
   },
   "repository": {
     "type": "git",
@@ -17,16 +19,23 @@
     "url": "https://github.com/ahewitt-glasswall/page-title/issues"
   },
   "homepage": "https://github.com/ahewitt-glasswall/page-title#readme",
-  "dependencies": {
+  "peerDependencies": {
     "react": "^16.13.1",
-    "webpack": "^4.42.1"
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
     "babel-loader": "^8.1.0",
+    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.0.2",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "sass-loader": "^8.0.2",
+    "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
 }
