--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "page-title",
-  "version": "1.0.0",
+  "version": "1.0.6",
   "description": "NPM Package Test for Glasswall.",
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prepare": "rmdir /s/q dist && npm run build",
-    "publish": "npm publish"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -24,17 +23,17 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
+    "babel-loader": "^8.1.0",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "babel-loader": "^8.1.0",
-    "css-loader": "^3.4.2",
     "html-webpack-plugin": "^4.0.2",
     "mini-css-extract-plugin": "^0.9.0",
-    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "css-loader": "^3.4.2",
     "sass-loader": "^8.0.2",
+    "node-sass": "^4.13.1",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.11"
   }
