--- a/package.json
+++ b/package.json
@@ -1,10 +1,15 @@
 {
   "name": "page-title",
-  "version": "1.0.6",
+  "version": "1.0.14",
   "description": "NPM Package Test for Glasswall.",
   "main": "index.js",
+  "files": [
+    "/index.js",
+    "/index.css"
+  ],
   "scripts": {
     "build": "webpack --mode production",
+    "start": "webpack-dev-server --mode development",
     "test": "echo \"Error: no test specified\" && exit 1",
     "prepublishOnly": "npm run build"
   },
@@ -23,18 +28,26 @@
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "babel-loader": "^8.1.0",
     "@babel/core": "^7.9.0",
     "@babel/preset-env": "^7.9.0",
     "@babel/preset-react": "^7.9.4",
-    "html-webpack-plugin": "^4.0.2",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "css-loader": "^3.4.2",
+    "html-webpack-plugin": "^4.0.3",
     "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.13.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "css-loader": "^3.4.2",
     "sass-loader": "^8.0.2",
-    "node-sass": "^4.13.1",
     "webpack": "^4.42.1",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3",
+    "eslint": "^6.8.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-node": "^11.0.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-standard": "^4.0.1"
   }
 }
